extends Node2D

func _ready():
	pass

func _on_AshurForest_pressed():
	pass # replace with function body


func _on_Tenebrae_Forest_pressed():
	pass # replace with function body


func _on_MtDoom_pressed():
	pass # replace with function body


func _on_SparklingSands_pressed():
	pass # replace with function body


func _on_DalanBeach_pressed():
	pass # replace with function body


func _on_The_Lava_Pits_pressed():
	pass # replace with function body


func _on_Gellum_Glacier_pressed():
	pass # replace with function body


func _on_The_Bread_Basket_pressed():
	pass # replace with function body


func _on_To_Haven_pressed():
	pass # replace with function body
